Fix overflow problem with preloader

--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -1,5 +1,6 @@
 body {
-    height: 100vh;
+    // height: 100vh;
+    overflow: hidden;
     background-color: $color-primary;
     color: $color-accent;
     font-family: $suisse;
